# rpi-sound-machine

./: .gitignore  LICENSE  README.md  TODO.md  justfile  pyproject.toml  rpi_host_config_example.yaml
rpi-remote-tools/: justfile
rpi-remote-tools/rpi_remote_tools/: pyproject.toml  rpi_installation.py  rpi_remote.py  ssh_client.py  tools.py
rpi_sound_machine/: Makefile  __init__.py  cli.py  cli_tool_box.py  device_tool.py  device_tool_box.py  install.py  installation.py  installer_tools.py  main.py  pyproject.toml  rpi-sound-machine.service  rpi_installation.py  run.sh  settings.ini  settings.mk  settings.yaml  sound_machine.py  start-rpi-sound-machine.sh  start-tmux.sh  start.sh  uninstall.py
rpi_sound_machine/developer_tools/: __init__.py  application_utilities.py  install.py  settings.ini  uninstall.py  utilities_tools.py
rpi_sound_machine/static/: script.js  style.css
rpi_sound_machine/system-service/: sound-machine-start.sh  sound-machine.service  start-rpi-sound-machine.sh
rpi_sound_machine/templates/: index.html
templates/: index.html
test/unit_test/: __init__.py  test_main.py  test_sound_machine.py
tools/: __init__.py  pyproject.toml  ssh_client.py  tools.py
