[project]
name = "rpi-sound-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["ALL", "Q"]
ignore = [
    "T201", # print
    "D203", # incorrect-blank-line-before-class (conflicting with D211 `no-blank-line-before-class`)
    "D213", # multi-line-summary-second-line (conflicting with D212 `multi-line-summary-first-line`)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
