[project]
name = "rpi-sound-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["ALL", "Q"]
ignore = [
    "D103", # Missing docstring in public function
    "D203", # incorrect-blank-line-before-class (conflicting with D211 `no-blank-line-before-class`)
    "D213", # multi-line-summary-second-line (conflicting with D212 `multi-line-summary-first-line`)
    "T201", # print
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "S101",  # Use of `assert` detected (it's OK to use assert in pytest functions))
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
