[project]
name = "rpi-sound-machine"
version = "0.1.0"
description = "RPI application for playing sounds."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "pygame>=2.6.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = [
    "../test",
]
